--- a/frontend/src/pages/Tools.css
+++ b/frontend/src/pages/Tools.css
@@ -1,10 +1,45 @@
 .calculator {
+
+    max-width: 2000px;
+    margin: 0 auto; /* Center the container horizontally */
+}
+
+.calc_box {
     display: flex;
     flex-direction: row;
-    margin-left: 3rem;
-    margin-right: 3rem;
-    margin-bottom: 3rem;
-    /* border: 1px solid black; */
+
+    border: 1px solid black;
+}
+
+.calc_box_card {
+
+    padding: 20;
+    border: '1px solid black';
+    width: 50%;
+}
+
+.calc_box_card .custom-card-img {
+ 
+    border: 1px solid rgb(205, 12, 205);
+
+
+}
+
+.calc_box_card .custom-card-img {
+    width: 70%;
+    border: 1px solid rgb(0, 0, 0);
+    max-width: 500px;
+
+
+}
+
+.calc_box_form {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    width: 100%;
+    max-width: 1000px;
+
 }
 
 
@@ -20,11 +55,19 @@
         display: flex;
         flex-direction: column;
 
+
     }
 
     .calc_box_card {
-        width: '200px';
+
         border: '1px solid black';
+        width: 100%;
+
+    }
+
+    .calc_box_card .custom-card-img {
+        width: 30%;
+        border: 1px solid rgb(219, 10, 34);
 
 
     }
@@ -32,19 +75,13 @@
 
 @media screen and (max-width: 400px) {
 
-    .calculator {
-
-        margin-left: 1rem;
-        margin-right: 1rem;
-
-    }
-
     .calc_box_card .custom-card-img {
         width: 50%;
         border: 1px solid rgb(18, 125, 62);
-    
-    
+
+
     }
+
     .calc_box {
         display: flex;
         flex-direction: column;
@@ -59,10 +96,10 @@
     }
 
     .calc_box_form {
-        width:auto;
+        width: auto;
         border: 1px solid black;
-    
-    
+
+
     }
 
 
