--- a/frontend/src/pages/Tools.css
+++ b/frontend/src/pages/Tools.css
@@ -1,7 +1,8 @@
 .calculator {
 
     max-width: 2000px;
-    margin: 0 auto; /* Center the container horizontally */
+    margin: 0 auto;
+    /* Center the container horizontally */
 }
 
 .calc_box {
@@ -19,7 +20,7 @@
 }
 
 .calc_box_card .custom-card-img {
- 
+
     border: 1px solid rgb(205, 12, 205);
 
 
@@ -40,6 +41,18 @@
     width: 100%;
     max-width: 1000px;
 
+}
+
+.calc_box_form_elements>* {
+    margin: 10px 10px;
+}
+
+p {
+    font-size: 16px;
+}
+
+.progress_bar_div {
+    width: 80%;
 }
 
 
