--- a/frontend/src/pages/Tools.css
+++ b/frontend/src/pages/Tools.css
@@ -1,3 +1,11 @@
+.page {
+    padding: 25px 25px;
+
+}
+.main_header {
+    color: #515799;
+    padding-bottom:10px;
+}
 .calculator {
 
     max-width: 2000px;
@@ -14,7 +22,7 @@
 
 .calc_box_card {
 
-    padding: 20;
+    margin: 10px;
     /* border: '1px solid black'; */
     width: 50%;
 }
@@ -40,19 +48,28 @@
     /* border: 1px solid black; */
     width: 100%;
     max-width: 1000px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
 }
 
 .calc_box_form_elements Button{
     margin-bottom: 5px;
+    margin-top: 5px;
+
 }
 
 .calc_box_form_elements_row {
-    border: 2px solid rgb(180, 180, 180);
+    border: 1px solid rgb(195, 195, 195);
+    border-radius: 5px;
+    margin-bottom: 5px;
+
     
 }
 
 .calc_box_form_elements_row >* {
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 5px;
     
 }
 
