--- a/frontend/src/pages/Tools.css
+++ b/frontend/src/pages/Tools.css
@@ -25,19 +25,17 @@
     margin: 10px;
     /* border: '1px solid black'; */
     width: 50%;
+    max-width: 800px;
 }
 
-.calc_box_card .custom-card-img {
-
-    /* border: 1px solid rgb(205, 12, 205); */
-
-
-}
 
 .calc_box_card .custom-card-img {
-    width: 70%;
+    
     /* border: 1px solid rgb(0, 0, 0); */
-    max-width: 500px;
+    max-width: 800px;
+    align-self: center;
+    margin:5px;
+    width: 250px;
 
 
 }
@@ -87,9 +85,16 @@ p {
         flex-direction: column-reverse;
     }
 
+    .calc_box_card {
+
+        /* width: 50%; */
+        max-width: 1050px;
+
+    }
+
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
     .calc_box {
         display: flex;
         flex-direction: column;
