added link to resources page

--- a/frontend/src/pages/Resources.css
+++ b/frontend/src/pages/Resources.css
@@ -10,11 +10,14 @@
 }
 
 .card2  {
-    min-height: 500px;
+    /* min-height: 500px; */
     margin-top: 50px;
-    
+
 }
 
+.list-group {
+    padding: 15px 15px 15px 15px;
+}
 
 .main_header {
     color: #515799;
