--- a/frontend/src/pages/styles/Resources.css
+++ b/frontend/src/pages/styles/Resources.css
@@ -3,9 +3,14 @@
 
 }
 
-.card-group  {
+h3 {
+    padding-top: 20px;
+   
+}
+
+.card-group {
     /* padding: 25px 25px; */
-    
+
 
 }
 
@@ -13,9 +18,9 @@
     margin-top: 15px;
 }
 
-.card2  {
+.card2 {
     /* min-height: 500px; */
-    margin-top: 50px;
+    /* margin-top: 50px; */
 
 }
 
@@ -25,8 +30,9 @@
 
 .main_header {
     color: #515799;
-    padding-bottom:10px;
+    padding-bottom: 10px;
 }
+
 .calculator {
 
     max-width: 2000px;
@@ -51,11 +57,11 @@
 
 
 .calc_box_card .custom-card-img {
-    
+
     /* border: 1px solid rgb(0, 0, 0); */
     max-width: 800px;
     align-self: center;
-    margin:5px;
+    margin: 5px;
     width: 250px;
 
 
@@ -71,7 +77,7 @@
     margin-right: 10px;
 }
 
-.calc_box_form_elements Button{
+.calc_box_form_elements Button {
     margin-bottom: 5px;
     margin-top: 5px;
 
@@ -82,14 +88,14 @@
     border-radius: 5px;
     margin-bottom: 5px;
 
-    
+
 }
 
-.calc_box_form_elements_row >* {
+.calc_box_form_elements_row>* {
     margin-bottom: 5px;
     margin-top: 5px;
     margin-left: 5px;
-    
+
 }
 
 p {
