--- a/frontend/src/components/Common/Common.css
+++ b/frontend/src/components/Common/Common.css
@@ -1,37 +1,93 @@
 .intro {
-    background: url(https://images.ctfassets.net/cj8g3qewem31/6gCFHHMx6FOowAQzBZnTBb/1027042c219756b1ff5357f3e3bc5646/jptmhqql2cycugs2qgzl.jpg) center center no-repeat;
-    background-color: #e5e5e5;
+    /* background: url(https://images.ctfassets.net/cj8g3qewem31/6gCFHHMx6FOowAQzBZnTBb/1027042c219756b1ff5357f3e3bc5646/jptmhqql2cycugs2qgzl.jpg) center center; */
+    background-color: #2c2c2c;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+
+
 }
-.intro .overlay {
-  background: rgba(0, 0, 0, 0.2);
+
+.intro .overlay {}
+
+
+
+.homepage {
+
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    margin-top: 50px;
 }
+
 .intro h1 {
+
     font-family: "Raleway", sans-serif;
     /* text-align: center; */
     color: #fff;
-    font-size: 5vw;
+    /* font-size: 4vw; */
     font-weight: 700;
     text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 10px;
+
 }
+
 .intro h1 span {
+
     font-weight: 400;
     color: #5ca9fb;
 }
+
 .intro p {
     color: #fff;
-    font-size: 2vw;
+    /* font-size: 1vw; */
     font-weight: 300;
-    text-align: center;
+
     margin-bottom: 60px;
 }
+
 header .intro-text {
+    margin: auto;
+    width: 50%;
     padding-top: 350px;
     padding-bottom: 200px;
-    text-align: center;
+
+}
+
+
+
+@media (min-width:2000px) {
+
+    .container {
+        height: 1500px;
+        position: relative;
+        /* border: 3px solid green; */
+    }
+
+    .intro h1 {
+
+        font-family: "Raleway", sans-serif;
+        /* text-align: center; */
+        color: #fff;
+        font-size: 4vw;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-top: 0;
+        margin-bottom: 10px;
+
+    }
+
+    .intro p {
+        color: #fff;
+        font-size: 1vw;
+        font-weight: 300;
+
+        margin-bottom: 60px;
+    }
 }
